test/visibility/private/functions/accessesOther.good
accessesOther.chpl:10: error: Cannot access 'foo', 'foo' is private to 'M1'
